<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fake9.tendee.SearchActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_alignTop="@+id/Search_Input"
        android:layout_toEndOf="@+id/H_Label"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/H_Label"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="User Search"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp" />

    <view
        android:id="@+id/result_list"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/Search_Input" />

    <EditText
        android:id="@+id/Search_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/H_Label"
        android:layout_below="@+id/H_Label"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="14dp"
        android:hint="Search by Name"
        android:ems="10"
        android:inputType="textPersonName" />


</RelativeLayout>
