<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimary"
    tools:context="com.example.fake9.tendee.MainActivity">


    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout" />

    <Button
        android:id="@+id/appoint_btn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignStart="@+id/search_btn"
        android:layout_below="@+id/main_page_toolbar"
        android:layout_marginTop="19dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorAccent"
        android:text="Schedule"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/appoint_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorAccent"
        android:text="Search"
        android:textColor="@android:color/white"
        android:textSize="36sp" />


</RelativeLayout>
