...
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/colorAccent"
        android:text="ALREADY HAVE ACCOUNT"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="250dp"
        android:layout_height="250dp"
...
